--- a/src/pages/Newsfeed/Newsfeed.css
+++ b/src/pages/Newsfeed/Newsfeed.css
@@ -1,39 +1,11 @@
+/* Add styling for the app container and friend recommendation */
+.app-container {
+    display: flex;
+    justify-content: center;
+}
+
 /* Newsfeed.css */
 .newsfeed {
     max-width: 600px;
-    margin: auto;
-}
-
-.comment-section {
-    margin-top: 10px;
-    border-top: 1px solid #eee;
-    padding-top: 10px;
-}
-
-.comment {
-    margin-bottom: 5px;
-}
-
-.comment-form {
-    display: flex;
-    margin-top: 10px;
-}
-
-.comment-form input {
-    flex-grow: 1;
-    margin-right: 5px;
-}
-
-.comment-form button {
-    border: none;
-    background-color: #007bff;
-    color: white;
-    padding: 5px 10px;
-    cursor: pointer;
-}
-
-.comment button {
-    margin-left: 10px;
-    padding: 2px 6px;
-    font-size: 0.8rem;
+    margin-right: 20px;
 }
